# evio

./: .gitignore  README.md  pyproject.toml
src/evio/core/: packet.py  types.py
tests/: test_types_packet.py
